--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <!-- <li class="active"><a href="#header">Home</a></li> -->
           <li><a href="#about">About</a></li>
           <li><a href="#resume">Resume</a></li>
-          <!-- <li><a href="#services">Services</a></li> -->
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#contact">Contact</a></li>
 
@@ -74,9 +74,7 @@
             <div class="content d-flex flex-column justify-content-center">
               <h3>Design with Cool thinking!</h3>
               <p>
-                Design has been passion of my life, I have graphic design experience for over 3 years includes marketing design, brochure design, and, photo shooting. 在我閒暇之餘，我參加Coding Bootcamp，以進步自己的programming技術，讓自己更有競爭力。 
-              </p>
-              <div class="row">
+I have always been passionate about design! I am currently a graphic designer with over 3 years of professional experience including photo shoots and marketing/brochure design. I also recently ‘graduated’ from a full-stack web development coding course held at SMU which helped me to learn new skills such as HTML5, CSS3, JavaScript and more.                <div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="icofont-simple-smile"></i>
