--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
             <div class="content d-flex flex-column justify-content-center">
               <h3>Design with Cool thinking!</h3>
               <p>
-I have always been passionate about design! I am currently a graphic designer with over 3 years of professional experience including photo shoots and marketing/brochure design. I also recently ‘graduated’ from a full-stack web development coding course held at SMU which helped me to learn new skills such as HTML5, CSS3, JavaScript and more.                <div class="row">
+I have always been passionate about design! I am currently a graphic designer with over 3 years of professional experience including photo shoots and marketing / brochure design. I also recently graduated from a full-stack web development coding course held at SMU which helped me to learn new skills such as HTML5, CSS3, JavaScript and other more expertise.<div class="row">
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="icofont-simple-smile"></i>
-                    <span data-toggle="counter-up">40</span>
+                    <span data-toggle="counter-up">30</span>
                     <p><strong>Positive Attitude</strong></br> consequuntur voluptas nostrum aliquid ipsam architecto ut.</p>
                   </div>
                 </div>
@@ -102,8 +102,8 @@ I have always been passionate about design! I am currently a graphic designer wi
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="icofont-award"></i>
-                    <span data-toggle="counter-up">10</span>
-                    <p><strong></strong></br> rerum asperiores dolor alias quo reprehenderit eum et nemo pad der</p>
+                    <span data-toggle="counter-up">20</span>
+                    <p><strong>Talent</strong></br> rerum asperiores dolor alias quo reprehenderit eum et nemo pad der</p>
                   </div>
                 </div>
               </div>
@@ -120,7 +120,7 @@ I have always been passionate about design! I am currently a graphic designer wi
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Foundation Skills are key to success in the workplace. I not only constantly improve my Adobe skills but also working on my coding skill by watching online tutorial such as Coursera and Udemy. Here is what I have: </p>
         </div>
 
         <div class="row skills-content">
@@ -212,11 +212,11 @@ I have always been passionate about design! I am currently a graphic designer wi
               <h5>2019 - 2020</h5>
               <p><em>Southern Methodist University, Dallas, TX</em></p>
               <ul>
-                <li>Utilizing HTML, CSS, and JavaScript to build a website. </li>
-                <li>Mastering terminal commands.</li>
-                <li>Parsing JSON to extract meaningful data. </li>
-                <li>Create scalable web apps, APIs, and Services. </li>
-                <li>Creating single-page applications with React. </li>
+                <li>Utilizing HTML, CSS, bootstrap and JavaScript to build a responsive website</li>
+                <li>Mastering terminal commands</li>
+                <li>Parsing JSON to extract meaningful data</li>
+                <li>Create scalable web apps, APIs, and Services</li>
+                <li>Creating single-page applications with React.js</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -224,9 +224,10 @@ I have always been passionate about design! I am currently a graphic designer wi
               <h5>2011 - 2015</h5>
               <!-- <p><em>Takming University Of Science and Technology - Taipei, TW</em></p> -->
               <ul>
-                <li>Graphics and layout in print media </li>
-                <li>Digital graphic design</li>
-                <li>Learing movie and video editing sofeware such as Aftereffect and Premiere.</li>
+                <li>Cultivating creativity and critical thinking on graphic design                </li>
+                <li>Utilizing Adobe Aftereffect and Premiere to do video editing </li>
+                <li>Gaining the ability to be able to engaging and visualizing a particular idea into graphic campaign</li>
+                <li>developing the skills that helps me to be a valuable contribution to whichever type of team I’m in</li>
 
               </ul>            
             </div>
@@ -239,10 +240,13 @@ I have always been passionate about design! I am currently a graphic designer wi
               <p><em>Dealmoon - Richardson, TX </em></p>
               <p>
                 <ul>
-                  <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                  <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                  <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                  <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                  <li>Ideating compelling ideas and developing those ideas into clear design solutions</li>
+                  <li>Presenting concepts and creative ideas to internal teams (editors, marketers etc.) </li>
+                  <li>Working across different mediums, including our website, printed event collaterals, email and digital ad
+                    campaigns, custom swags </li>
+                  <li> Managing and prioritizing a workload of multiple projects from concept to completion</li>
+                <li> Ensuring all product deadlines, merchandise standards and brand standards are consistently met</li>
+                <li>Contact - Maggie Miller / Graphic Designer 385-282-8872</li>
                 </ul>
               </p>
             </div>
@@ -252,10 +256,10 @@ I have always been passionate about design! I am currently a graphic designer wi
               <p><em>Modern Art Museum of Fort Worth - Fort Worth, TX</em></p>
               <p>
                 <ul>
-                  <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                  <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
+                  <li>DMarketing and Communications Department Internship</li>
+                  <li>Design flyers, menu, and other print pieces. Photo shooting for Museum Café</li>
                   <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                  <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                  <li>Contact - Rueben Gonzales / Marketing & Communications Associate 817-840-2163</li>
                 </ul>
               </p>
             </div>
@@ -326,8 +330,8 @@ I have always been passionate about design! I am currently a graphic designer wi
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-card">Graphic Design</li>
+              <!-- <li data-filter=".filter-web">Web</li> -->
             </ul>
           </div>
         </div>
@@ -338,26 +342,30 @@ I have always been passionate about design! I am currently a graphic designer wi
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
+                <h4>Movie Seat Booking</h4>
+                <!-- <p>Display movie choices and seats in a theater to select from in order to purchase tickets</p> -->
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-1.jpg">
+                <!-- data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i> -->
+              </a>
+                <a href="https://amberh31.github.io/movie-seat-booking/" target="_blank"  title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Form Validator</h4>
+                <!-- <p>Web</p> -->
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-2.jpg" >
+                <!-- data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i> -->
+              </a>
+                <a href="https://amberh31.github.io/form-validator/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -366,12 +374,14 @@ I have always been passionate about design! I am currently a graphic designer wi
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
+                <h4>Trivia Game</h4>
+                <!-- <p>App</p> -->
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-3.jpg" >
+                <!-- data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i> -->
+              </a>
+                <a href="https://amberh31.github.io/TriviaGame/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -380,26 +390,30 @@ I have always been passionate about design! I am currently a graphic designer wi
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
+                <h4>Invitation Card Design</h4>
+                <!-- <p>Card</p> -->
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-4.jpg" >
+                <!-- data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i> -->
+              </a>
+                <a href="https://www.behance.net/gallery/82382823/Invitation-Card-Design" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 2</h4>
-                <p>Web</p>
+                <h4>Brochure Design</h4>
+                <!-- <p>Web</p> -->
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-5.jpg" >
+                <!-- data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i> -->
+              </a>
+                <a href="https://www.behance.net/gallery/73045179/Modern-Art-of-Fort-Worth-Banner-Design" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -408,12 +422,14 @@ I have always been passionate about design! I am currently a graphic designer wi
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 3</h4>
-                <p>App</p>
+                <h4>Commercial Camera Website</h4>
+                <!-- <p>App</p> -->
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-6.jpg" >
+                <!-- data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i> -->
+              </a>
+                <a href="http://easyecom-client.herokuapp.com/" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -422,12 +438,14 @@ I have always been passionate about design! I am currently a graphic designer wi
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
+                <h4>Flyer Design</h4>
+                <!-- <p>Card</p> -->
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-7.jpg" >
+                <!-- data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i> -->
+              </a>
+                <a href="https://www.behance.net/gallery/73044503/Cafe-Flyer-Design" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -436,26 +454,30 @@ I have always been passionate about design! I am currently a graphic designer wi
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 3</h4>
-                <p>Card</p>
+                <h4>Chups Table Signboard Design</h4>
+                <!-- <p>Card</p> -->
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-8.jpg" >
+                <!-- data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i> -->
+              </a>
+                <a href="https://www.behance.net/gallery/49381623/Chupa-Chups-Table-Signboard-Design" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Logo Animation and Graphics</h4>
+                <!-- <p>Web</p> -->
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/portfolio-9.jpg" >
+                <!-- data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i> -->
+              </a>
+                <a href="https://www.behance.net/gallery/82387807/dynata-banner-design" target="_blank" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
